[package]
name = "github-device-flow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
chrono = "0.4.22"
serde = "1.0.143"
serde_derive = "1.0.143"
serde_json = "1.0"
clap = { version = "3.2.17", features = ["derive"] }
openssl = { version = "0.10.41", features = ["vendored"] }
