[package]
name = "github-device-flow"
version = "0.1.4"
edition = "2021"
description = "Binary and library for performing the GitHub Device Flow"
license = "MIT"
exclude = ["/script"]
repository = "https://github.com/jakewilkins/gh-device-flow"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json", "rustls-tls"] }
chrono = "0.4.26"
serde = "1.0.143"
serde_derive = "1.0.143"
serde_json = "1.0"
clap = { version = "3.2.17", features = ["derive"] }
