[package]
name = "github-device-flow"
version = "0.2.1"
edition = "2021"
description = "Binary and library for performing the GitHub Device Flow"
license = "MIT"
exclude = ["/script"]
repository = "https://github.com/jakewilkins/gh-device-flow"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12", features = ["blocking", "json"] }
chrono = "0.4"
serde = "1"
serde_derive = "1"
serde_json = "1"
clap = { version = "4", features = ["derive"] }
